Added public folder and fixed handlebar extensions.

--- a/registration_test.html
+++ b/registration_test.html
@@ -4,7 +4,7 @@
   <title>Registration</title>
   <!-- Compressed CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.css">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="public/css/style.css">
 </head>
 <body>
   <div class="row">
